--- a/mm/CSS/estilo.css
+++ b/mm/CSS/estilo.css
@@ -1,17 +1,24 @@
-#divBusca{
-    background-color:#2F4F4F;
-    border:solid 1px;
-    border-radius:15px;
-    width:300px;
-  }
-  
-  #txtBusca{
-    float:left;
-    background-color:transparent;
-    padding-left:5px;
-    font-style:italic;
-    font-size:18px;
-    border:none;
-    height:32px;
-    width:260px;
-  }
+/* index */
+.header_alinhamento{
+  display: flex;
+}
+.head_1 {
+  border-bottom: 2px solid rgb(0, 195, 255); 
+  display: inline-block; 
+}
+.head_2{
+  border-bottom: 2px solid rgb(0, 67, 192); 
+  display: inline-block; 
+}
+.botao_login {
+  background-color: #0130ff; 
+  color: white; 
+  padding: 10px 20px; 
+  border: none; 
+  border-radius: 5px; 
+  cursor: pointer; 
+}
+.botao_login:hover {
+  background-color: #04a0e9; 
+}
+
