--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,24 +1,34 @@
 /* index */
-.header_alinhamento{
+.header_alinhamento {
   display: flex;
 }
+
 .head_1 {
-  border-bottom: 2px solid rgb(0, 195, 255); 
-  display: inline-block; 
-}
-.head_2{
-  border-bottom: 2px solid rgb(0, 67, 192); 
-  display: inline-block; 
-}
-.botao_login {
-  background-color: #0130ff; 
-  color: white; 
-  padding: 10px 20px; 
-  border: none; 
-  border-radius: 5px; 
-  cursor: pointer; 
-}
-.botao_login:hover {
-  background-color: #04a0e9; 
+  border-bottom: 2px solid rgb(0, 195, 255);
+  display: inline-block;
 }
 
+.head_2 {
+  border-bottom: 2px solid rgb(0, 67, 192);
+  display: inline-block;
+}
+
+.botao_login {
+  background-color: #0130ff;
+  color: white;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.botao_login:hover {
+  background-color: #04a0e9;
+}
+
+/* teste para definir loc*/
+#map {
+  height: 400px;
+}
+
+/* teste para definir loc*/
