--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,6 +1,6 @@
 
 
-body {
+/*body{
   background-color: #11516e;
   display: flex;
   flex-direction: column;
@@ -10,7 +10,7 @@ body {
   margin: 0;
   font-family: Arial, sans-serif;
 }
-
+*/
 .header_alinhamento {
   display: flex;
   justify-content: center;
@@ -119,8 +119,60 @@ body {
 }
 
 
-@media (max-width: 600px) {
-  .login_container {
-    width: 90%;
+
+
+/*tela de teste*/
+
+#map{
+  height:23rem;
+  margin-top:1rem;
+  }  
+  
+  .cabeçalho_rota3 {
+      display: flex;
+      margin-left: 42rem;
+      font-size:1.5rem ;
   }
-}
+  .primeiro {
+  
+      border-style: solid;
+      border-top: none;
+      border-right: none;
+      border-left: none;
+      border-color: #0821e2;
+      display: flex;
+      justify-content: center;
+  }
+  
+  .segundo {
+      border-style: solid;
+      border-top: none;
+      border-right: none;
+      border-left: none;
+      border-color: cyan;
+      display: flex;
+      justify-content: center;
+  }
+  
+  .casa_tamanho ion-icon {
+      font-size: 2rem;
+      margin-top: -60px;
+      margin-right: 300px;
+      margin-left: 51rem;
+      display: flex;
+      justify-content: center;
+  }
+  
+  .onibus_tamanho ion-icon {
+       font-size: 2rem;
+       color: #0821e2;
+  }
+  
+  .seta ion-icon{
+       font-size: 2rem;
+  }
+  
+  .comunidade ion-icon{
+      font-size: 2rem;
+  }
+/*fim da tela teste*/
