--- a/css/estilo.css
+++ b/css/estilo.css
@@ -176,3 +176,27 @@
       font-size: 2rem;
   }
 /*fim da tela teste*/
+
+.leaflet-person-icon {
+  width: 100px;
+  height: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #f0f0f0;
+  border-radius: 50%;
+  border: 2px solid #000;
+  font-size: 24px;
+}
+
+.leaflet-bus-icon {
+  width: 50px;
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: hsl(100, 10%, 20px); /* Cor do ônibus */
+  border-radius: 10px;
+
+  font-size: 32px; /* Tamanho do ícone */
+}
