--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,6 +1,5 @@
-
-
-/*body{
+/* Estilos base para o body */
+body {
   background-color: #11516e;
   display: flex;
   flex-direction: column;
@@ -10,33 +9,41 @@
   margin: 0;
   font-family: Arial, sans-serif;
 }
-*/
+
+/* Alinhamento do header */
 .header_alinhamento {
   display: flex;
   justify-content: center;
   width: 100%;
 }
 
+/* Logo */
 .logo {
   display: flex;
   align-items: center;
 }
 
-.head_1 {
-  border-bottom: 2px solid rgb(0, 195, 255);
+/* Cabeçalhos */
+.head_1, .head_2 {
+  border-bottom: 2px solid;
   display: inline-block;
+}
+
+.head_1 {
+  border-color: rgb(0, 195, 255);
 }
 
 .head_2 {
-  border-bottom: 2px solid rgb(0, 67, 192);
-  display: inline-block;
+  border-color: rgb(0, 67, 192);
 }
 
+/* Container de login e registro */
 .login_container {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 20px;
+  justify-content: center;
+  margin-top: 0; /* Remover a margem superior para centralização */
   padding: 20px;
   border: 1px solid #ccc;
   border-radius: 10px;
@@ -46,37 +53,30 @@
   background-color: #f9f9f9;
 }
 
+/* Títulos dentro do container */
 .login_container h2 {
   margin-bottom: 20px;
   font-size: 24px;
   color: #333;
 }
 
+/* Estilos dos campos de input */
 .input_text {
   padding: 10px;
   margin: 10px 0;
   border: 1px solid #ccc;
   border-radius: 5px;
-  width: 94%;
-  max-width: 1000px;
+  width: 94%; /* Garantir que o input utilize toda a largura do container */
 }
-.botao_registrar{
+
+/* Botões */
+.botao_registrar, .botao_login, .botao_google {
   width: 100%;
-  max-width: 1000px;
   padding: 10px;
   border: none;
   border-radius: 5px;
   cursor: pointer;
-  margin: 2px 0;
-}
-.botao_login, .botao_google {
-  width: 100%;
-  max-width: 100%;
-  padding: 3%;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-  margin: 2% 0;
+  margin: 5px 0; /* Ajustar margens para espaço entre botões */
 }
 
 .botao_login {
@@ -118,122 +118,79 @@
   background-color: #0a7d45;
 }
 
-
-
-
-/*tela de teste*/
-
-#map{
-  height:23rem;
-  margin-top:1rem;
-  }  
-  
-  .cabeçalho_rota3 {
-      display: flex;
-      margin-left: 42rem;
-      font-size:1.5rem ;
-  }
-  .primeiro {
-  
-      border-style: solid;
-      border-top: none;
-      border-right: none;
-      border-left: none;
-      border-color: #0821e2;
-      display: flex;
-      justify-content: center;
-  }
-  
-  .segundo {
-      border-style: solid;
-      border-top: none;
-      border-right: none;
-      border-left: none;
-      border-color: cyan;
-      display: flex;
-      justify-content: center;
-  }
-  
-  .casa_tamanho ion-icon {
-      font-size: 2rem;
-      margin-top: -60px;
-      margin-right: 300px;
-      margin-left: 51rem;
-      display: flex;
-      justify-content: center;
-  }
-  
-  .onibus_tamanho ion-icon {
-       font-size: 2rem;
-       color: #0821e2;
-  }
-  
-  .seta ion-icon{
-       font-size: 2rem;
-  }
-  
-  .comunidade ion-icon{
-      font-size: 2rem;
-  }
-/*fim da tela teste*/
-
-.leaflet-person-icon {
-  width: 100px;
-  height: 100px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: #f0f0f0;
-  border-radius: 50%;
-  border: 2px solid #000;
-  font-size: 24px;
+/* Estilos para a tela de teste */
+#map {
+  height: 23rem;
+  margin-top: 1rem;
 }
 
-.leaflet-bus-icon {
-  width: 50px;
-  height: 50px;
+.cabeçalho_rota3 {
   display: flex;
   justify-content: center;
-  align-items: center;
-  background-color: hsl(100, 10%, 20px); /* Cor do ônibus */
-  border-radius: 10px;
-
-  font-size: 32px; /* Tamanho do ícone */
+  font-size: 1.5rem;
 }
 
-/* tela de Horários */
+.primeiro, .segundo {
+  border-style: solid;
+  border-top: none;
+  border-right: none;
+  border-left: none;
+  display: flex;
+  justify-content: center;
+}
+
+.primeiro {
+  border-color: #0821e2;
+}
+
+.segundo {
+  border-color: cyan;
+}
+
+.casa_tamanho ion-icon {
+  font-size: 2rem;
+  margin: -60px 0 0 0;
+  display: flex;
+  justify-content: center;
+}
+
+.onibus_tamanho ion-icon, .seta ion-icon, .comunidade ion-icon {
+  font-size: 2rem;
+}
+
+.onibus_tamanho ion-icon {
+  color: #0821e2;
+}
+
+/* Estilos para horários */
 .contenho {
   display: flex;
   align-items: center;
   justify-content: center;
+}
 
+.ho, .rar {
+  border-style: solid;
+  border-top: none;
+  border-right: none;
+  border-left: none;
+  display: flex;
+  justify-content: center;
 }
 
 .ho {
-  border-style: solid;
-  border-top: none;
-  border-right: none;
-  border-left: none;
   border-color: #0821e2;
-  display: flex;
-  justify-content: center;
 }
 
 .rar {
-  border-style: solid;
-  border-top: none;
-  border-right: none;
-  border-left: none;
   border-color: cyan;
-  display: flex;
-  justify-content: center;
 }
 
 .nucleo {
   display: flex;
   text-align: center;
   justify-content: center;
-  margin-left: 9rem;
+  margin-left: 0; /* Ajustar margens */
 }
 
 .casa_horarios {
@@ -245,12 +202,11 @@
 .home {
   font-size: 25px;
   color: white;
-  margin-left: 6rem;
-  margin-top: 1rem;
+  margin: 1rem 0 0 0;
 }
 
 .horarios-rotas {
-  display: flex;  
+  display: flex;
   justify-content: center;
 }
 
@@ -260,10 +216,9 @@
 
 .tabela {
   width: 200px;
-  border: 0px solid black;
   padding: 25px;
-  margin: 0px;
-  text-align:center
+  margin: 0;
+  text-align: center;
 }
 
 .fechar {
@@ -275,12 +230,7 @@
 .aquilo {
   display: flex;
   justify-content: space-evenly;
-  margin-bottom: -1%;
-  margin-top: -6%;
-  margin-left: 40%;
-  margin-right: 40%;
- 
-
+  margin: 0;
 }
 
 .aquilo p {
@@ -290,23 +240,21 @@
 .cerol {
   font-size: 35px;
   color: blue;
-  margin-left: 20rem;
+  margin-left: 0; /* Ajustar margens */
 }
 
 .praq {
   font-size: 35px;
-
 }
 
 .esquerda {
   display: flex;
   justify-content: center;
-  margin-left: 2%;
-
+  margin-left: 0; /* Ajustar margens */
 }
 
 .hora_ida {
-  text-align: 10px;
+  text-align: left; /* Corrigir o alinhamento do texto */
 }
 
 .rotasifpi {
@@ -320,6 +268,3 @@
   width: 20rem;
   padding-bottom: 2rem;
 }
-/* tela de Horários */
-
-
